assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Itim&family=Roboto:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Girassol&family=Itim&family=Roboto:wght@300&display=swap');

* {
    margin: 0px;
    padding: 0px;
    border: none;
}

body {
    font-family: Roboto, cursive;
    font-weight: 300;
    color: #67a35f;
    background-color: #ffffff;
    line-height: 1.6;
    letter-spacing: 2px;
}

p {
    font-family: Roboto, Helvetica, sans-serif;
    font-weight: 300;
    color: #55504b;
    background-color: #ffffff;
    line-height: 1.6;
    letter-spacing: 1px;
}

a {
    text-decoration: none;
}

header {
    margin: 0px;
    padding: 0px;
    border: none;

    /*
    position: fixed; 
  top: 0; 
  width: 100%;
  margin-top: 0px;
  z-index:1000; 
  */
}

h1,
h2 {
    font-family: Girassol, helvetica, sans-serif;
}

#logo {
    font-size: 300%;
    text-transform: uppercase;
    letter-spacing: 3px;
    text-align: center;
    margin: 0px;
    padding: 0px;
    border: none;
    color: #ffffff;
    background-color: #67a35f;
    height: 70px;
    float: center;
    position: relative;
}


/* navigation links */

#menu {
    padding: 5px 0 5px 0;
    background-color: white;
}

.nav {
    border-width: 1px 0;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
    font-size: 120%;
    letter-spacing: 3px;
}

.nav li {
    display: inline;
}

.nav a {
    display: inline-block;
    padding: 10px;
    color: #6d8c73;
    text-decoration: none;
    font-weight: none;
}

.nav a:hover {
    color: #ffffff;
    background-color: #e4b9b4;
}

section {
    font-family: Roboto, Helvetic, sans-serif;
    font-weight: 300;
    color: #55504b margin: auto;
}

div {
    margin: auto;
}


/*

div #general-info {
    margin-bottom: 50px;
}

div #bird-links {
    margin-bottom: 50px;
}

*/

#top-images {
    background-color: #ffffff;
    margin-top: 10px;
    margin: auto;
}

#top-images>img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

#top-left {
    float: left;
    width: 200px;
}

#top-center {
    float: center;
    width: 200px;
}

#top-right {
    float: right;
    width: 200px;
}

.content {
    margin: 5px 50px;
    padding: 10px 50px;
    border: none;
}

hr {
    border-top: 1px solid #c78f89;
    margin: 10px 100px;
    padding: 10px 100px;
    width: auto;
}



/*headings and logo */


/* birds.html */

/* index.html divs */

.intro {
    text-align: center;
    margin: 0 auto;
    padding-bottom: 50px;
    width: 60%;
    height: fit-content;
}

#intro-box {
    text-align: center;
    height: 180px;
    width: 60%;
    background-color: white;
}

#intro-box>p {
    color: #55504b;
    background-color: transparent;
    font-size: 110%;
}

.introduction {
    padding-top: 10px;
    position: relative;
}

.introduction a {
    color: #67a35f;
}

.content h2 {
    color: #67a35f;
}

div.pre-wrap {
    white-space: pre-wrap;
}


.container {
    width: auto;
    height: 350px;
    background-color: #ffffff;
    padding-top: 0;
    padding-left: 100px;
    padding-right: 100px;
    padding-bottom: 0px;
    margin-top: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    margin: auto;
}

#what {
    padding: 0 100px 0 100px;
    text-align: center;
    height: 500px;
    width: 60%;
    position: relative;
    margin: auto;
}

#running-image {
    height: 100px;
    margin: auto;
}

#running-image>img {
    height: 200px;
    margin: auto;
}


#box2-1-3 {
    float: left;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
    text-align: right;
    margin: auto;
    position: relative;
}

#box2-2-3 {
    float: center;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
    margin: 0 auto;
    position: relative;
}

#box2-3-3 {
    float: right;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
    text-align: left;
    position: relative;
}

.birds-box2 {
    height: 200px;
    width: 200px;
    overflow: hidden;
}


#why {
    text-align: center;
    height: 550px;
    width: 70%;
}

#why-image>img {
    height: 200px;
    margin: auto;
}

#box3-1-3 {
    float: left;
    width: 400px;
    height: 260px;
    background-color: white;
    border: none;
    text-align: left;
}

#box3-2-3 {
    float: left;
    width: 200px;
    height: 50%;
    background-color: white;
    border: none;
    margin: 0 auto;
    padding: 0 20px 0 20px;
}

#box3-3-3 {
    float: right;
    width: 400px;
    height: 260px;
    background-color: white;
    border: none;
    text-align: right;
}

#activities {
    padding: 0 100px 0 100px;
    width: 60%;
}

#activities a {
    color: #67a35f;
}


#box4-1-3 {
    float: left;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
}

#box4-2-3 {
    float: center;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
    margin: 0 auto;
}

#box4-3-3 {
    float: right;
    width: 200px;
    height: 260px;
    background-color: white;
    border: none;
}

#drawing-img {
    height: 200px;
}

#walking-img {
    height: 200px;
}

#coffee-img {
    height: 200px;
}

#who {
    text-align: center;
    width: 70%;
}

#box5-1-2 {
    float: left;
    width: 200px;
    height: 300px;
    background-color: white;
    border: none;
    text-align: right;
}

#box5-2-2 {
    float: right;
    width: 800px;
    height: 300px;
    background-color: white;
    border: none;
    text-align: left;
    padding-left: 30px;
}

#box5-2-2 a {
    color: #67a35f;
}

#portrait {
    height: 200px;
    float: center;
}

#back-top {
    width: 700px;
    height: 20px;
    padding-left: 15px;
    padding-right: 15px;
    padding-bottom: 10px;
    margin-top: 10px;
    display: flex;
    text-justify: right;
}

#back-top a {
    color: #67a35f;
}

/* bird links */

div #general-info {
    margin-bottom: 50px;
    width: 900px;
}

#bird-links {
    color: #55504b;
    width: 70%;
    text-align: center;
    font-family: Roboto, Helvetica, sans-serif;
    line-height: 1.6;
    margin: 0 auto;
    padding: 0;
    text-align: center;
    font-size: 100%;
    letter-spacing: 3px;
}

#bird-links li {
    display: inline;
}

#bird-links a {
    display: inline-block;
    padding: 10px;
    color: #6d8c73;
}

#bird-links a:hover {
    color: #ffffff;
    background-color: #e4b9b4;
}


/* boxes for content */

.info {
    height: 500px;
    font-family: Roboto, Helvetica, sans-serif;
    background-color: #ffffff;
    width: 900px;
    padding: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.bird-info-left {
    padding-top: 0px;
    width: 40%;
    float: left;
}

.bird-info-right {
    padding-top: 0px;
    width: 60%;
    float: right;
    text-align: left;
}

img {
    max-width: 100%;
    height: auto;
    border: 2px solid #55504b groove;
    padding: 10px;
    border-radius: 25%;
}

.birds {
    height: 200px;
}

#next-page {
    border-width: 1px 0;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: right;
    font-size: 110%;
    letter-spacing: 3px;
}

#next-page li {
    display: inline;
    list-style: none;
}

/* activities.html */

#intro-box-activities {
    text-align: center;
    height: 600px;
    width: 60%;
    background-color: white;
}

#intro-box-activities>p {
    color: #55504b;
    background-color: transparent;
    font-size: 110%;
}

#flock {
    padding: 0 100px 0 100px;
    text-align: center;
    height: 200px;
    width: 90%;
    position: relative;
    margin: auto;
}




/* footer */

footer {
    font-family: Roboto, Helvetica, sans-serif;
    color: #ffffff;
    background-color: #e4b9b4;
    width: absolute 100%;
    text-align: center;
    letter-spacing: 3px;
    margin: 0px;
    padding: 50px;
    border: none;
    line-height: 1.6;
    position: relative;
}

#bird-links-footer {
    border-width: 1px 0;
    list-style: none;
    margin: 0;
    padding: 0;
    text-align: center;
    font-size: 120%;
    letter-spacing: 3px;
}

#bird-links-footer li {
    display: inline;
}

#bird-links-footer a {
    display: inline-block;
    padding: 10px;

    color: #ffffff;
    text-decoration: none;
    font-weight: normal;
}

#bird-links-footer a:hover {
    color: #67a35f;
    background-color: #ffffff;
}

footer a {
    color: #ffffff;
}

/* contact.html */

.content #contact-box {
    margin: 0 auto;
    padding: 10px 50px;
    border: none;
    height: 50px;
    width: 70%;
}

#contact-box {
    text-align: center;
    height: 180px;
    width: 60%;
    background-color: white;
}



#contact-blurb {
    height: 500px;
    width: 60%;
    padding: 100px 0 50px 0;
    margin: 0 auto;
}

#contact-blurb>img {
    height: 170px;
}

.social-links>li {
    display: inline;
}

.social-links i {
    font-size: 150%;
    color: #67a35f;
    margin: 5px;
    padding: 5px;
}

/* form */

.container form {
    height: auto;
    width: 900px;
    border-radius: 5px;
    background-color: #fff0f0;
    padding: 20px;
    margin-top: 80px;
    margin-bottom: 150px;
}

input {
    outline-color: #94a798;
}

input[type=text],
select,
textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    resize: vertical;
    vertical-align: top;
}

input[type=email],
select,
textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    resize: vertical;
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

form {}

label {
    padding: 15px 15px 15px 0;
    display: inline block;
    float: right;
}

.row {}

.form-left {
    float: left;
    width: 25%;
    margin-top: 6px;
}

.form-right {
    float: right;
    width: 75%;
    margin-top: 6px;
}

#name {}

#email {}

#subject {
    height: 200px;
}

input[type=submit] {
    background-color: #e4b9b4;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    float: right;
}

input[type=submit]:hover {
    background-color: #67a35f;
}

/* media queries */
/*
@media screen and (max-width: 1500px) {
    .container {
        width: 65%;
        height: 1200px;
        margin: 0 auto;
        display: flex;
        flex-wrap: wrap;
    }

    .box {
        width: 100%;
        center: left;
        padding: 0;
        margin: 0;
    }

    .box-center {
        clear: both;
        width: 100%;
        float: left;
        padding: 0;
        margin: 0;
        height: 50px;
    }

    /* birds.html */
/*
    .info {
        width: 70%;
        height: auto;
        margin: 0 auto;
        display: flex;
        flex-wrap: wrap;
    }
    .bird-info-left {
        width: 100%;
        margin: 0 auto;
        padding: 0;
    }

    .bird-info-right {
        width: 100%;
        margin: 0 auto;
        padding: 0;
    }
}

